--- a/src/Resources/app/administration/src/component/blur-elysium-slider-config-sizing/blur-elysium-slider-config-sizing.twig
+++ b/src/Resources/app/administration/src/component/blur-elysium-slider-config-sizing/blur-elysium-slider-config-sizing.twig
@@ -5,7 +5,6 @@
 
         {% block blur_elysium_slider_config_sizing_aspect_ratio %}
             <blur-card-section 
-                v-if="viewportConfig"
                 :position-identifier="positionIdentifiers.sizing.sectionAspectRatio">
 
                 <blur-paragraph
@@ -24,14 +23,14 @@
 
                         <sw-number-field 
                             numberType="int"
-                            v-model="viewportConfig.aspectRatio.width"
+                            v-model="sizingViewportConfig.aspectRatio.width"
                             :label="$tc('blurElysiumSlider.config.sizing.aspectRatio.width')">
                             <template #hint><blur-elysium-device-hint /></template>
                         </sw-number-field>
 
                         <sw-number-field 
                             numberType="int"
-                            v-model="viewportConfig.aspectRatio.height"
+                            v-model="sizingViewportConfig.aspectRatio.height"
                             :label="$tc('blurElysiumSlider.config.sizing.aspectRatio.height')">
                             <template #hint><blur-elysium-device-hint /></template>
                         </sw-number-field>
@@ -42,7 +41,7 @@
                         :allow-empty="true"
                         :label="$tc('blurElysiumSlider.config.sizing.maxHeight.label')"
                         :placeholder="$tc('blurElysiumSlider.config.sizing.maxHeight.placeholder')"
-                        v-model="viewportConfig.maxHeight">
+                        v-model="sizingViewportConfig.maxHeight">
                         <template #suffix>Px</template>
                         <template #hint><blur-elysium-device-hint /></template>
                     </sw-number-field>
@@ -53,7 +52,6 @@
 
         {% block blur_elysium_slider_config_sizing_spacing %}
             <blur-card-section
-                v-if="viewportConfig"
                 :position-identifier="positionIdentifiers.sizing.sectionSpacing"
                 :last="true">
 
@@ -70,7 +68,7 @@
                         :allow-empty="true"
                         :label="$tc('blurElysiumSlider.config.sizing.spacing.slidesGap.label')"
                         :placeholder="$tc('blurElysiumSlider.general.unitPlaceholderPx')"
-                        v-model="viewportConfig.slidesGap">
+                        v-model="sizingViewportConfig.slidesGap">
                         <template #suffix>Px</template>
                         <template #hint><blur-elysium-device-hint /></template>
                     </sw-number-field>
@@ -79,7 +77,7 @@
                         numberType="int" 
                         :label="$tc('blurElysiumSlider.config.sizing.spacing.paddingY.label')"
                         :placeholder="$tc('blurElysiumSlider.general.unitPlaceholderPx')"
-                        v-model="viewportConfig.paddingY">
+                        v-model="sizingViewportConfig.paddingY">
                         <template #suffix>Px</template>
                         <template #hint><blur-elysium-device-hint /></template>
                     </sw-number-field>
@@ -88,7 +86,7 @@
                         numberType="int"
                         :label="$tc('blurElysiumSlider.config.sizing.spacing.paddingX.label')"
                         :placeholder="$tc('blurElysiumSlider.general.unitPlaceholderPx')"
-                        v-model="viewportConfig.paddingX">
+                        v-model="sizingViewportConfig.paddingX">
                         <template #suffix>Px</template>
                         <template #hint><blur-elysium-device-hint /></template>
                     </sw-number-field>
