--- a/src/Resources/views/storefront/component/blur-elysium-slide/includes/style.html.twig
+++ b/src/Resources/views/storefront/component/blur-elysium-slide/includes/style.html.twig
@@ -2,17 +2,17 @@
     {% set selectorClass = '.blur-elysium-slide' %}
 {% endif %}
 
-{% if slideStyles is not defined %}
-    {% set slideStyles = null %}
-{% endif %}
-
-{% set slideContainerStyles = {
-    '--bg-color': slideData.slideSettings.container.bgColor
+{% set slideStyles = {
+    '--slide-bg-color': slideData.slideSettings.slide.bgColor,
+    '--slide-gradient-color-start': slideData.slideSettings.slide.bgGradient.startColor,
+    '--slide-gradient-color-end': slideData.slideSettings.slide.bgGradient.endColor,
+    '--slide-gradient-deg': slideData.slideSettings.slide.bgGradient.gradientDeg ? slideData.slideSettings.slide.bgGradient.gradientDeg ~ 'deg' : null,
+    '--container-bg-color': slideData.slideSettings.container.bgColor,
+    '--description-color': slideData.slideSettings.slide.description.color,
+    '--headline-color': slideData.slideSettings.slide.headline.color
 } %}
 
-{% set headlineStyles = {
-    '--color': slideData.slideSettings.slide.headline.color
-} %}
+{% set slideViewportStyles = slideData.slideSettings.viewports %}
 
 {% set presentationMedia = slideData.presentationMedia %}
 
@@ -28,132 +28,122 @@
         <style id="style-{{ slideData.id }}" style="display:none !important; visibility:hidden !important;">
             {% block blur_elysium_slide_style_prepend %}{% endblock %}
 
-            {# general slide styles #}
             {% block blur_elysium_slide_style_slide %}
                 {{ selectorClass|raw }}[data-elysium-slide-id="{{ slideData.id }}"] {
+                    {# Slide vars #}
                     {% if slideStyles is not empty %}
                         {% for prop, value in slideStyles|filter(v => v !== null) %}
                             {{prop}}: {{value}};
                         {% endfor %}
                     {% endif %}
 
-                    {% block blur_elysium_slide_style_slide_append %}{% endblock %}
+                    {% block blur_elysium_slide_style_default_append %}{% endblock %}
                 }
             {% endblock %}
 
-            {# general slide container styles #}
-            {% if slideContainerStyles is not empty %}
-                {{ selectorClass|raw }}[data-elysium-slide-id="{{ slideData.id }}"] .blur-elysium-slide-container {
-                    {% for prop, value in slideContainerStyles|filter(v => v !== null) %}
-                        {{prop}}: {{value}};
-                    {% endfor %}
-                }
-            {% endif %}
-
-            {# slide headline styles #}
-            {% if headlineStyles is not empty %}
-                {{ selectorClass|raw }}[data-elysium-slide-id="{{ slideData.id }}"] .blur-elysium-slide-headline {
-                    {% for prop, value in headlineStyles|filter(v => v !== null) %}
-                        {{prop}}: {{value}}
-                    {% endfor %}
-                }
-            {% endif %}
-
-            {# viewport dependent options for slide #}
+            {# Slide viewport dependent vars #}
             {% if slideViewportStyles is not null %}
                 {% for device, options in slideViewportStyles %}
                     @media (min-width: {{ theme_config('breakpoint.' ~ blurElysiumBreakpoints[device])~'px' }}) {
                         {{ selectorClass|raw }}[data-elysium-slide-id="{{ slideData.id }}"] {
-                            --padding-x: {{ options.slide.paddingX ~ 'px' }};
-                            --padding-y: {{ options.slide.paddingY ~ 'px' }};
-                            --align-items: {{ options.slide.alignItems }};
-                            --justify-content: {{ options.slide.justifyContent }};
-                            --slide-container-gap: {{ options.container.gap ~ 'px' }};
+                            {% if options.slide.paddingX %}
+                                --slide-padding-x: {{ options.slide.paddingX ~ 'px' }};
+                            {% endif %}
+                            {% if options.slide.paddingY %}
+                                --slide-padding-y: {{ options.slide.paddingY ~ 'px' }};
+                            {% endif %}
+                            {% if options.slide.alignItems %}
+                                --slide-align-items: {{ options.slide.alignItems }};
+                            {% endif %}
+                            {% if options.slide.justifyContent %}  
+                                --slide-justify-content: {{ options.slide.justifyContent }};
+                            {% endif %}
                             {% if options.slide.borderRadius is defined %}
-                                --border-radius: {{ options.slide.borderRadius ~ 'px' }};
-                            {% else %}
-                                --border-radius: 0;
+                                --slide-border-radius: {{ options.slide.borderRadius ~ 'px' }};
                             {% endif %}
                             {% if options.description.fontSize is not empty %}
                                 --slide-description-font-size: {{ options.description.fontSize ~ 'px' }};
                             {% endif %}
-                            {% if options.container.columnWrap is not same as(true) and presentationMedia is not null %}
-                                --slide-container-direction: row;
-                            {% else %}
-                                --slide-container-direction: column;
+
+                            {# Slide container vars #}
+                            {% if options.container.columnWrap is same as(true) %}
+                                --container-direction: column;
                             {% endif %}
-                            {% if options.image.maxWidth is defined and options.image.maxWidthDisabled is not same as(true) %}
-                                --slide-image-flex-basis: {{ options.image.maxWidth ~ 'px' }};
-                                --slide-image-max-w: {{ options.image.maxWidth ~ 'px' }};
-                                --slide-image-flex-grow: 0;
+                            {% if options.container.gap %}
+                                --container-gap: {{ options.container.gap ~ 'px' }};
                             {% endif %}
-                            {% if options.content.maxWidth is defined and options.content.maxWidthDisabled is not same as(true) %}
-                                --slide-content-flex-basis: {{ options.content.maxWidth ~ 'px' }};
-                                --slide-content-flex-grow: 0;
+                            {% if options.container.paddingY %} 
+                                --container-padding-y: {{ options.container.paddingY ~ 'px' }};
                             {% endif %}
-                        }
-                        {% if options.coverImage %}
-                            {{ selectorClass|raw }}[data-elysium-slide-id="{{ slideData.id }}"] .blur-elysium-slide-cover-image {
-                                {% for key, value in options.coverImage %}
-                                    {{ '--' ~ camel_to_kebab_case(key) }}: {{ value }};
-                                {% endfor %}
-                            }
-                        {% endif %}
-                        {% if options.coverVideo %}
-                            {{ selectorClass|raw }}[data-elysium-slide-id="{{ slideData.id }}"] .blur-elysium-slide-cover-video {
-                                {% for key, value in options.coverVideo %}
-                                    {{ '--' ~ camel_to_kebab_case(key) }}: {{ value }};
-                                {% endfor %}
-                            }
-                        {% endif %}
-                        {{ selectorClass|raw }}[data-elysium-slide-id="{{ slideData.id }}"] .blur-elysium-slide-container {
-                            --padding-x: {{ options.container.paddingX ~ 'px' }};
-                            --padding-y: {{ options.container.paddingY ~ 'px' }};
-                            
-                            --border-radius: {{ options.container.borderRadius ~ 'px' }};
+                            {% if options.container.paddingX %}
+                                --container-padding-x: {{ options.container.paddingX ~ 'px' }};
+                            {% endif %}
+                            {% if options.container.borderRadius %}
+                                --container-border-radius: {{ options.container.borderRadius ~ 'px' }};
+                            {% endif %}
                             {% if options.container.maxWidthDisabled is not same as(true) %}
-                                --max-width: {{ options.container.maxWidth ~ 'px' }};
+                                --container-max-width: {{ options.container.maxWidth ~ 'px' }};
                             {% endif %}
-                            --align-items: {{ options.container.alignItems }};
+                            {% if options.container.alignItems %} 
+                                --container-align-items: {{ options.container.alignItems }};
+                            {% endif %}
                             {% if options.container.justifyContent is defined %} 
-                                --justify-content: {{ options.container.justifyContent }};
+                                --container-justify-content: {{ options.container.justifyContent }};
                             {% endif %}
-                        }
-                        {{ selectorClass|raw }}[data-elysium-slide-id="{{ slideData.id }}"] .blur-elysium-slide-content {
+
+                            {# Slide image vars #}
+                            {% if options.image.maxWidth is defined and options.image.maxWidthDisabled is not same as(true) %}
+                                --image-flex-basis: {{ options.image.maxWidth ~ 'px' }};
+                                --image-max-w: {{ options.image.maxWidth ~ 'px' }};
+                                --image-flex-grow: 0;
+                            {% endif %}
                             {% if options.container.order is same as('reverse') %}
-                                --order: 2;
+                                --image-order: 1;
                             {% else %}
-                                --order: 1;
-                            {% endif %}
-                            {% if options.content.textAlign is defined %}
-                                --text-align: {{ options.content.textAlign }};
-                            {% else %}
-                                --text-align: left;
-                            {% endif %}
-                            --padding-x: {{ options.content.paddingX ~ 'px' }};
-                            --padding-y: {{ options.content.paddingY ~ 'px' }};
-                        }
-                        {{ selectorClass|raw }}[data-elysium-slide-id="{{ slideData.id }}"] .blur-elysium-slide-image {
-                            {% if options.container.order is same as('reverse') %}
-                                --order: 1;
-                            {% else %}
-                                --order: 2;
+                                --image-order: 2;
                             {% endif %}
                             {% if options.image.justifyContent is defined %}
-                                --justify-content: {{ options.image.justifyContent }};
+                                --image-justify-content: {{ options.image.justifyContent }};
                             {% endif %}
-                            {% if options.image.imageFullWidth is defined and options.image.imageFullWidth is same as(true) %}
-                                --image-width: 100%;
+
+                            {# Slide content vars #}
+                            {% if options.content.maxWidth is defined and options.content.maxWidthDisabled is not same as(true) %}
+                                --content-flex-basis: {{ options.content.maxWidth ~ 'px' }};
+                                --content-flex-grow: 0;
+                            {% endif %}
+                            {% if options.container.order is same as('reverse') %}
+                                --content-order: 2;
                             {% else %}
-                                --image-width: auto;
+                                --content-order: 1;
                             {% endif %}
-                        }
-                        {{ selectorClass|raw }}[data-elysium-slide-id="{{ slideData.id }}"] .blur-elysium-slide-headline {
+                            {% if options.content.textAlign %}
+                                --content-text-align: {{ options.content.textAlign }};
+                            {% endif %}
+                            {% if options.content.paddingX %}
+                                --content-padding-x: {{ options.content.paddingX ~ 'px' }};
+                            {% endif %}
+                            {% if options.content.paddingY %}
+                                --content-padding-y: {{ options.content.paddingY ~ 'px' }};
+                            {% endif %}
+
+                            {# Slide headline vars #}
                             {% if options.headline.fontSize is defined and options.headline.fontSize is not empty %}
-                                font-size: {{ options.headline.fontSize ~ 'px' }};
-                            {% else %}
-                                font-size: revert;    
+                                --headline-font-size: {{ options.headline.fontSize ~ 'px' }};
                             {% endif %}
+
+                            {# Slide cover vars #}
+                            {% if options.coverImage %}
+                                {% for key, value in options.coverImage %}
+                                    {{ '--cover-' ~ camel_to_kebab_case(key) }}: {{ value }};
+                                {% endfor %}
+                            {% endif %}
+                            {% if options.coverVideo %}
+                                {% for key, value in options.coverVideo %}
+                                    {{ '--cover-' ~ camel_to_kebab_case(key) }}: {{ value }};
+                                {% endfor %}
+                            {% endif %}
+
+                            {% block blur_elysium_slide_style_viewport_append %}{% endblock %}
                         }
                     }
                 {% endfor %}
