--- a/src/Resources/app/storefront/src/scss/_elysium-slide.scss
+++ b/src/Resources/app/storefront/src/scss/_elysium-slide.scss
@@ -145,3 +145,10 @@
     color: var(--description-color);
     font-size: var(--description-font-size);
 }
+
+.blur-elysium-slide-link-overlay {
+    display: block;
+    position: absolute;
+    inset: 0;
+    z-index: 5;
+}
