--- a/src/Resources/views/storefront/component/blur-elysium-slide/includes/style.html.twig
+++ b/src/Resources/views/storefront/component/blur-elysium-slide/includes/style.html.twig
@@ -61,9 +61,6 @@
                             {% if options.slide.borderRadius is defined %}
                                 --slide-border-radius: {{ options.slide.borderRadius ~ 'px' }};
                             {% endif %}
-                            {% if options.description.fontSize is not empty %}
-                                --slide-description-font-size: {{ options.description.fontSize ~ 'px' }};
-                            {% endif %}
 
                             {# Slide container vars #}
                             {% if options.container.columnWrap is same as(true) %}
@@ -129,6 +126,11 @@
                             {# Slide headline vars #}
                             {% if options.headline.fontSize is defined and options.headline.fontSize is not empty %}
                                 --headline-font-size: {{ options.headline.fontSize ~ 'px' }};
+                            {% endif %}
+
+                            {# Slide description vars #}
+                            {% if options.description.fontSize is not empty %}
+                                --description-font-size: {{ options.description.fontSize ~ 'px' }};
                             {% endif %}
 
                             {# Slide cover vars #}
